--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "prisma:generate": "prisma generate",
     "r2:create:test": "wrangler r2 bucket create cloudflare-worker-template-test",
     "r2:create:prod": "wrangler r2 bucket create cloudflare-worker-template-prod",
-    "kv:create:test": "wrangler kv:namespace create KV --env test",
-    "kv:create:prod": "wrangler kv:namespace create KV --env production",
+    "kv:create:test": "wrangler kv namespace create KV --env test",
+    "kv:create:prod": "wrangler kv namespace create KV --env production",
     "type-check": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
